--- a/src/index.local.html
+++ b/src/index.local.html
@@ -3,6 +3,14 @@
 <head>
     <meta charset="UTF-8">    
     <title>Try coding</title>
+    <meta property="og:url"  content="https://saulsalazarmendez.github.io/ejemplos/" />
+    <meta property="og:locale" content="es_MX">
+<meta property="og:type"     content="article" />
+<meta property="og:title"    content="Try coding" />
+<meta property="og:description" content="Es una plataforma para probar codigo web " />
+<meta property="og:image" content="https://saulsalazarmendez.github.io/ejemplos/try-coding/preview.d71f43f0.svg.png">
+<meta property="og:image:width" content="300">
+<meta property="og:image:height" content="450">
     <link rel="stylesheet" href="./css/main.css">      
     <link rel="shortcut icon" href="icono.svg" type="image/svg">
 </head>
