ADD - linter hintjs Se agrega un linter de verdad. Se arregla el problema de no ejecutar modulos js.

--- a/src/index.local.html
+++ b/src/index.local.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es_MX">
 <head>
     <meta charset="UTF-8">    
     <title>Try coding</title>
@@ -60,9 +60,10 @@
         <input class="autor" value="Autor" title="Autor">
     </seccion>
     <seccion class="seccion-acciones">   
-        <button class="accion" id="ayuda">Comandos</button>
-        <button class="accion" id="guardar">Guardar</button>
-        <button class="accion" id="compartir">Compartir</button>
+        <button class="accion" id="codepen" title="abrir en codepen">Codepen</button>
+        <button class="accion" id="ayuda" title="mostrar comandos">Comandos</button>
+        <button class="accion" id="guardar" title="guardar como html">Guardar</button>
+        <button class="accion" id="compartir" title="copiar url para compartir">Compartir</button>
     </seccion>
 </header>
 <div id="editor">    
@@ -73,9 +74,10 @@
 </div>
 <div class="consola">
 </div>    
-<script src="https://cdnjs.cloudflare.com/ajax/libs/split.js/1.6.0/split.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/split.js/1.6.0/split.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.2.0/build/highlight.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jshint/2.13.1/jshint.min.js"></script>
     <script src="./js/main.js" type="module"></script>
 </body>
 </html>
