--- a/src/index.html
+++ b/src/index.html
@@ -78,6 +78,6 @@
     <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.2.0/build/highlight.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jshint/2.13.1/jshint.min.js"></script>
-    <script src="./js/main.js" ></script>
+    <script src="./js/main.js" type="module"></script>
 </body>
 </html>
