--- a/editor/src/index.html
+++ b/editor/src/index.html
@@ -48,6 +48,7 @@
     button.accion{
         border-radius: 5px;
         height: 40px;
+        font-weight: bold;
     }
     button.disable{
         filter: opacity(25%);
@@ -65,6 +66,10 @@
         content: "";
         border-radius: 0 0 3px 3px;
     }
+    button.ejecutar {
+        background-color: #198754;
+        color: white;        
+    }
 </style>
 <body>
 <header>
@@ -80,7 +85,7 @@
         <button class="accion" id="ayuda" title="mostrar comandos">Comandos</button>
         <button class="accion" id="guardar" title="guardar como html">Guardar</button>
         <button class="accion" id="compartir" title="copiar url para compartir">Compartir</button>
-        <button class="accion disable" id="run" title="Ejecutar código">Run</button>
+        <button class="accion ejecutar" id="run" title="Ejecutar código">Ejecutar</button>
     </seccion>
 </header>
 <div id="editor">    
