ADD - agregado estado de editor De momento controlamos eñ tema y si usa linter js

--- a/editor/src/index.html
+++ b/editor/src/index.html
@@ -29,6 +29,7 @@
         <button class="accion" id="guardar" title="guardar como html">Guardar</button>
         <button class="accion" id="compartir" title="copiar url para compartir">Compartir</button>
         <button class="accion ejecutar" id="run" title="Ejecutar código">Ejecutar</button>
+        <button class="accion" id="configurar" title="Configuraciones">&#x2699;</button>
     </seccion>
 </header>
 <div id="editor">    
